--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+    Loren Alvarez Mejias
+    Webpage for Moffat Bay Lodge Capstone 
+    personal contributions. Finalized 09/18/24
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
