"update p on contri"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
                 <div class="content">
                     <h3>UI Design, Media, Development</h3>
-                    <p>Color palettes, logo design, Attractions page, About Us page, website walkthrough video</p>
+                    <p>Color palettes, logo design, performed UX research, created personas, Attractions page, About Us page, website walkthrough video</p>
                     <div class="cps">
                         <h4>Color Palettes:</h4>
                         <p>Suggested several color palettes for the design of the website. CP 1 was chosen.</p>
